force-app/main/default/objects/Custom_Report_Field__mdt/Custom_Report_Field__mdt.object-meta.xml
<CustomObject>
    <label>Custom Report Field</label>
    <pluralLabel>Custom Report Fields</pluralLabel>
</CustomObject>