force-app/main/default/objects/Custom_Report_Field__mdt/fields/Custom_Report__c.field-meta.xml
<CustomField>
    <fullName>Custom_Report__c</fullName>
    <label>Custom Report</label>
    <referenceTo>Custom_Report__mdt</referenceTo>
    <relationshipLabel>Custom Report Fields</relationshipLabel>
    <relationshipName>Custom_Report_Fields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>