force-app/main/default/objects/Custom_Report_Field__mdt/fields/Hide_from_Report__c.field-meta.xml
<CustomField>
    <fullName>Hide_from_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide from Report</label>
    <type>Checkbox</type>
</CustomField>