force-app/main/default/objects/Custom_Report_Field__mdt/fields/Report_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Report_Field_Label__c</fullName>
    <label>Report Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>