force-app/main/default/objects/Custom_Report_Field__mdt/fields/Report_Field_Order__c.field-meta.xml
<CustomField>
    <fullName>Report_Field_Order__c</fullName>
    <label>Report Field Order</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>